[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causticsnupy"
version = "1.0.4"
authors = [
  { name="Wooseok Kang", email="woodykang@snu.ac.kr" },
]
description = "Python package for determining cluster members using caustic technique."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy>=1.20.3',
    'scipy>=1.7.1',
    'astropy>=4.3.1',
    'scikit-image>=0.17.2'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/woodykang/CausticSNUpy"